# socius

./: .gitignore  CLAUDE.md  CODE_AUDIT.md  GMAIL_SETUP_GUIDE.md  PRODUCTION_READY_REPORT.md  QUICKSTART.md  README.md  REMAINING_FIXES.md  TEST_RESULTS.txt
agent/: .env.example  AGENT_STATUS.md  TEST_CONFIDENCE_REPORT.md  TOOL_CALLING_TEST_RESULTS.md  config.py  exceptions.py  main.py  requirements.txt  socius_types.py  test_agent_tools.py  test_imports.py  test_robust_tool_calling.py  test_tool_calling_integration.py
agent/core/: agent.py  matching.py  permissions.py
agent/tools/: gmail_tool.py  imessage_tool.py  mcp_client.py
backend-py/: .env.example  .gitignore  README.md  config.py  main.py  models.py  requirements.txt
backend-py/services/: __init__.py  agent_service.py  mcp_server.py  redis_service.py  sanity_service.py
frontend-ts/: package.json
imessage-server/: README.md  requirements.txt  server.py
mcp-gmail-and-calendar/: .cursorignore  .pre-commit-config.yaml  pyproject.toml
mcp-gmail-and-calendar/mcp_gmail/: gmail.py
mcp-gmail-and-calendar/scripts/: test_gmail_setup.py
mcp-gmail-main/: .gitignore  README.md  pyproject.toml
mcp-gmail-main/mcp_gmail/: config.py  server.py
mcp-gmail-main/tests/: __init__.py  conftest.py
mcp-server/: .env.example  README.md  cache.py  config.py  database.py  main.py  requirements.txt  sanity_client.py
nextjs-socios-/: package-lock.json  package.json
proximity-service/: README.md
studio-socios-/: README.md  package-lock.json  package.json  sanity.cli.ts  sanity.config.ts
(+8 files in other folders)
